             suggested by Ashley Pond.
   *    (ms) Alexander Hartmaier added Log::Log4perl::Filter::MDC to filter 
             based on MDC key/value
   *    (ms) [rt.cpan.org 83193] The file appender now ignores owner/group 
             settings on all types of existing file system entries (previously,
             this was only the case for actual files).
        (ms) [rt.cpan.org 84289] Documented Level.pm's isGreaterOrEqual()
             comparator.

1.40 (2012/11/30)
   *    (ms) Denis Ibaev added support for DBI appender attributes.
   *    (ms) Chris Weyl put in a workaround for a DBD::CSV bug that
             tripped our test suite.
   *    (ms) Tim Bunce provided a patch using Carp::confess() instead of die()
             on the "Root Logger not initialized" message which pops up
             during global construction to make it easier to find the 
             offending code.
   *    (ms) Cygwin masks MSWin32-ishness by setting $^O to "cygwin" and not
             to "Win32". Modified check to catch both.
   *    (ms) Fixed unescaped brace in regex that perl 5.17.4 was complaining 
             about.

1.39 (2012/10/27)
   *    (ms) Markus Benning reported that logcroak/confess/die stringify
             their arguments, which gets in the way when throwing data
             structures as exceptions. Added flag $STRINGIFY_DIE_MESSAGE.
   *    (ms) [rt.cpan.org #80086] David Morel pointed out misleading 
             documentation in the Limiter composite appender. Fixed docs
             and added C<appender_method_on_flush> parameter to support
             appender flush calls by the limiter.
   *    (ms) [rt.cpan.org #79960] Fabrice Gabolde asked for %X{x} to be 
             interpolated as NULL for the database appender if its value is 
             undef. The DBI appender now inits PatternLayout with the 
             undef_column_name parameter set to undef (defaults to "[undef]").