@@ -6,7 +6,7 @@
 log4j.rootLogger=DEBUG, LOGFILE
 
 log4j.appender.LOGFILE=org.apache.log4j.FileAppender
-log4j.appender.LOGFILE.File=example.log
+log4j.appender.LOGFILE.File=example-java.log
 
 log4j.appender.LOGFILE.layout=org.apache.log4j.PatternLayout
 log4j.appender.LOGFILE.layout.ConversionPattern=%F %L %p %t %c - %m%n
