@@ -6,7 +6,7 @@
 log4j.rootLogger=DEBUG, LOGFILE
 
 log4j.appender.LOGFILE=Log::Log4perl::Appender::File
-log4j.appender.LOGFILE.filename=example.log
+log4j.appender.LOGFILE.filename=example-perl.log
 log4j.appender.LOGFILE.mode=append
 
 log4j.appender.LOGFILE.layout=org.apache.log4j.PatternLayout
